# dbt-lineage-viewer

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: generate_mock_manifest.py
src/dbt_lineage_viewer/: __init__.py  cli.py  column_lineage.py  parser.py  server.py
src/dbt_lineage_viewer/static/: app.js  index.html  style.css
