[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-lineage-viewer"
version = "0.1.0"
description = "Interactive DBT lineage explorer with search and filtering"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "GaloyMoney" }
]
keywords = ["dbt", "lineage", "data", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "rich>=13.0",
    "sqlglot>=20.0.0",
]

[project.scripts]
dbt-lineage = "dbt_lineage_viewer.cli:main"

[project.urls]
Homepage = "https://github.com/GaloyMoney/dbt-lineage-viewer"
Repository = "https://github.com/GaloyMoney/dbt-lineage-viewer"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_lineage_viewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
